[gd_scene load_steps=17 format=2]

[ext_resource path="res://JetBrainsMono-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Pop The Cell.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.188235, 0.192157, 0.254902, 1 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=22]

[sub_resource type="StyleBoxFlat" id=24]
bg_color = Color( 0.270588, 0.317647, 0.466667, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.8, 0.8, 0.8, 0 )

[sub_resource type="StyleBoxFlat" id=26]
bg_color = Color( 0.239216, 0.239216, 0.305882, 1 )

[sub_resource type="Theme" id=27]
Button/styles/focus = SubResource( 22 )
Button/styles/hover = SubResource( 24 )
Button/styles/normal = SubResource( 24 )
Button/styles/pressed = SubResource( 24 )
Panel/styles/panel = SubResource( 26 )

[sub_resource type="DynamicFont" id=10]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=13]
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=14]
content_margin_left = 6.0
content_margin_right = 6.0
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.14, 0.161, 0.217, 1 )

[sub_resource type="StyleBoxFlat" id=21]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=15]
content_margin_left = 6.0
content_margin_right = 6.0
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color( 0.15, 0.1725, 0.2325, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.4, 0.4225, 0.4825, 1 )

[sub_resource type="StyleBoxFlat" id=16]
content_margin_left = 6.0
content_margin_right = 6.0
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color( 0.15, 0.1725, 0.2325, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.125, 0.14375, 0.19375, 1 )

[sub_resource type="StyleBoxFlat" id=17]
content_margin_left = 6.0
content_margin_right = 6.0
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color( 0.15, 0.1725, 0.2325, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.41, 0.61, 0.91, 1 )

[sub_resource type="Theme" id=18]
Button/colors/font_color = Color( 0.8, 0.8075, 0.8275, 1 )
Button/colors/font_color_disabled = Color( 1, 1, 1, 0.3 )
Button/colors/font_color_focus = Color( 0.88, 0.8845, 0.8965, 1 )
Button/colors/font_color_hover = Color( 0.88, 0.8845, 0.8965, 1 )
Button/colors/font_color_pressed = Color( 0.41, 0.61, 0.91, 1 )
Button/colors/icon_color_hover = Color( 1.15, 1.15, 1.15, 1 )
Button/colors/icon_color_pressed = Color( 0.4715, 0.7015, 1.0465, 1 )
Button/fonts/font = SubResource( 13 )
Button/styles/disabled = SubResource( 14 )
Button/styles/focus = SubResource( 21 )
Button/styles/hover = SubResource( 15 )
Button/styles/normal = SubResource( 16 )
Button/styles/pressed = SubResource( 17 )

[node name="Pop The Cell" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 356.0
margin_top = 144.0
margin_right = 667.0
margin_bottom = 456.0

[node name="Name" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 311.0
margin_bottom = 53.0
custom_fonts/font = SubResource( 2 )
text = "Pop The Cell"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 57.0
margin_right = 311.0
margin_bottom = 226.0
theme = SubResource( 27 )
custom_constants/separation = 5

[node name="ProgressBar" type="Panel" parent="CenterContainer/VBoxContainer/VBoxContainer"]
margin_right = 311.0
margin_bottom = 53.0
rect_min_size = Vector2( 311, 53 )

[node name="Button" type="Button" parent="CenterContainer/VBoxContainer/VBoxContainer/ProgressBar"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -301.0

[node name="ProgressBar2" type="Panel" parent="CenterContainer/VBoxContainer/VBoxContainer"]
margin_top = 58.0
margin_right = 311.0
margin_bottom = 111.0
rect_min_size = Vector2( 0, 53 )

[node name="Button" type="Button" parent="CenterContainer/VBoxContainer/VBoxContainer/ProgressBar2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -301.0

[node name="ProgressBar3" type="Panel" parent="CenterContainer/VBoxContainer/VBoxContainer"]
margin_top = 116.0
margin_right = 311.0
margin_bottom = 169.0
rect_min_size = Vector2( 0, 53 )

[node name="Button" type="Button" parent="CenterContainer/VBoxContainer/VBoxContainer/ProgressBar3"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -301.0

[node name="Score" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 230.0
margin_right = 311.0
margin_bottom = 252.0
custom_fonts/font = SubResource( 10 )
text = "0"
align = 1

[node name="Highscore" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 256.0
margin_right = 311.0
margin_bottom = 278.0
custom_fonts/font = SubResource( 10 )
text = "0"
align = 1

[node name="(Re)Start" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 282.0
margin_right = 311.0
margin_bottom = 312.0
theme = SubResource( 18 )
text = "Start"

[connection signal="pressed" from="CenterContainer/VBoxContainer/VBoxContainer/ProgressBar/Button" to="." method="_on_1_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/VBoxContainer/ProgressBar2/Button" to="." method="_on_2_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/VBoxContainer/ProgressBar3/Button" to="." method="_on_3_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/(Re)Start" to="." method="_on_ReStart_pressed"]
